--- a/Tex/main.tex
+++ b/Tex/main.tex
@@ -310,6 +310,7 @@
 	\acro{FWHM}{Full width at half maximum}
 	\acro{TEM} {Transmission electron microscopy}
 	\acro{SAXS}{Small angle X-ray scattering}
+	\acro{DFT}{Discrete Fourier transform}
 	\acro{FFT}{Fast Fourier transform}
 	\acro{SLAC}{SLAC National Accelerator Laboratory}
 	\acro{LCLS}{Linac Coherent Light Source}
