--- a/Tex/experiment.tex
+++ b/Tex/experiment.tex
@@ -219,7 +219,7 @@ During the experiment, an unnoticed failure of the electronics of the octal dete
 The background subtracted and masked detector images were used to create spectra. The different samples were categorized into a smaller number of groups by the apparent similarity of the spectra/number of signal photons: The foil  data was grouped into three classes: one for copper foils, one for 10\,\textmu m thick iron foils and one for 500\,nm thick foils. The nanoparticle and single crystal data were assigned one class each.
 On these spectra, a regression was performed.  The model consisted of peaks at multiples of the K$_\alpha$, K$_\beta$ and of the excitation energy with an initial FWHM of 500\,eV and intensities following a negative binomial distribution (signal) or Poisson distribution (scattering noise). To roughly approximate the charge sharing, a numerical convolution with a  window of the shape
 \begin{equation}
-	w (x)= (1-p)\delta(x)+\rect\left(\frac{x-1/2}{E_{signal}}\right)*\frac{p}{E_{signal}}
+	w (x)= (1-p)\delta(x)+\rect\left(\frac{x-1/2}{E_{signal}}\right)\frac{p}{E_{signal}}
 \end{equation}
 was included, thus smearing the peaks to lower energies with a strength parameter $p$ (initialized as 25\%). The mean squared difference the logarithmic values was minimized. With this regression, an estimate for the number of modes of the binomial distribution as well as for the mean number of signal and scattering photons was found.
 
@@ -253,7 +253,7 @@ For determining the relative orientation of the crystal with regards to the dete
 For each sample, the images were split into sets of 5000 shots. After filtering for hot pixels and cutting bellow a noise threshold of 2\,keV, the mean was taken. To better distinguish the Kossel lines from the uniform fluorescence, a Gaussian blurred version ($\sigma$=20\, px) was subtracted (see \fref{fig:kosselgaasmean} for examples). The Kossel lines were roughly identified manually and the local maxima in the 20x20\,px surrounding block of an identified area were considered as points on the Kossel line. A least-square regression was performed,
 
 \begin{equation}
-	\arg\!\min_{R,t} \sum_{r} \min_{q\in Q} \left\Vert \frac{2 d * \left( \vec{r} - \vec{t} \right) \cdot \vec{Rq}}{\left|\vec{q}\right| \left| \left(\vec{r}-\vec{t}\right)\right|} -\lambda \right\Vert_2^2 \,,
+	\arg\!\min_{R,t} \sum_{r} \min_{q\in Q} \left\Vert \frac{2 d  \left( \vec{r} - \vec{t} \right) \cdot \vec{Rq}}{\left|\vec{q}\right| \left| \left(\vec{r}-\vec{t}\right)\right|} -\lambda \right\Vert_2^2 \,,
 \end{equation}
 with
 $\vec{q}$ a reciprocal lattice vector and element of the allowed reflections $Q$, wavelength $\lambda$ and lattice constant $d$, to find
@@ -264,7 +264,7 @@ $\vec{q}$ a reciprocal lattice vector and element of the allowed reflections $Q$
 \begin{figure}
 	\centering
 	\includegraphics[width=0.8\linewidth]{images/kosselfit.png}
-	\caption[User Interface for Kossel line based alignment]{User interface for performing a regression of the detector orientation and position to the Kossel lines visible in experimental data. The lines can be automatically identified,  be  manually modified afterwards and the reflections considered selected. This tool is used to perform the alignment for the GaAs single crystal samples.}
+	\caption[User Interface for Kossel line based alignment]{User interface created for performing a regression of the detector orientation and position to the Kossel lines visible in experimental data. The lines can be automatically identified,  be  manually modified afterwards and the reflections considered selected. This tool is used to perform the alignment for the GaAs single crystal samples.}
 	\label{fig:kosselfit}
 \end{figure}
 
