--- a/Tex/theory.tex
+++ b/Tex/theory.tex
@@ -1,6 +1,6 @@
 \chapter{Theory}
 \label{chap:theory}
-As the main principle of IDI is using intensity correlations of X-ray fluorescence, a basic recapitulation of the underlying definitions used in both simulations and the experimental application as well as (semi-) classical approach to coherence and the experiment of Hanbury-Brown Twiss will be given.
+As the main principle of IDI is using intensity correlations of X-ray fluorescence, a basic recapitulation of the underlying definitions used in both simulations and the experimental application as well as (semi-) classical approach to coherence and the experiment of Hanbury Brown and Twiss will be given.
 
 
 \section{X-Ray Fluorescence}
@@ -40,12 +40,12 @@ In the following, for simplicity, all considered fields are initially assumed to
 
 Spherical waves as solutions of the wave equation in spherical coordinates,
 \begin{equation}
-	\vec{E}(\vec{r},t)=\vec{E}_0(k,t) \frac{e^{i\vec{r}\vec{k}-iwt}}{\left|\vec{r}\right|} \,,
+	\vec{E}(\vec{r},t)=\vec{E}_0(\vec{k},t) \frac{e^{i\vec{r}\vec{k}-iwt}}{\left|\vec{r}\right|} \,,
 \end{equation}
 with wave vector $\vec{k}$ and angular frequency $\omega$ describe the electric field of light propagating isotropically in vacuum. 
 The superposition principle allows the addition of two waves (with the real amplitudes $\vec{A}_{1,2}$ and phases $\phi_{1,2}$)
 \begin{equation}
-\vec{E}(\vec{r},t)=\vec{E_1}(\vec{r},t)+\vec{E_2}(\vec{r},t)=\vec{A_1}e^{i\phi_1}  e^{i\vec{r}\vec{k_1}-iw_1t} + \vec{A_1}e^{i\phi_1}  e^{i\vec{r}\vec{k_2}-iw_2t} 
+\vec{E}(\vec{r},t)=\vec{E_1}(\vec{r},t)+\vec{E_2}(\vec{r},t)=\vec{A_1}e^{i\phi_1}  e^{i\vec{r}\vec{k_1}-iw_1t} + \vec{A_2}e^{i\phi_1}  e^{i\vec{r}\vec{k_2}-iw_2t} 
 \end{equation} 
 The intensity measured at a point $\vec{r}$ with a measurement time $T$ will be
 \begin{equation}
@@ -55,7 +55,7 @@ The intensity measured at a point $\vec{r}$ with a measurement time $T$ will be
 \end{equation}
 The superposition of two monochromatic, stationary waves with a fixed phase difference $\Delta \phi$, such as a wave and its time delayed copy (\fref{fig:michelson}) in an interferometer, gives rise to interference fringes
 \begin{align*}
-	\left<I(\vec{r},t)\right> & = I_1+I_2+2\left<\Re({E_1(\vec{r},t)}E_2^*(\vec{r},t))\right> \\
+	\left<I(\vec{r},t)\right> & = I_1+I_2+2\left<\operatorname{Re}({E_1(\vec{r},t)}E_2^*(\vec{r},t))\right> \\
 	& = I_1+I_2+2\sqrt{I_1I_2}\cos\left((\vec{k_1}-\vec{k_2})\vec{r}+\Delta \phi\right)  \,.
 	\numberthis
 \label{eq:interference}
@@ -73,13 +73,13 @@ and its normalized version, the complex degree of (self-)coherence $\gamma$, as
 \begin{equation}
 \gamma(\tau)=\frac{\Gamma(\tau)}{\Gamma(0)} =  \frac{\Gamma(\tau)}{\left<I(t)\right>} \,.
 \end{equation} 
-Now \fref{eq:interference} can be written as $I=I_{1}+I_{2}+2 \sqrt{I_{1} I_{2}} \Re\left[\gamma(\tau)\right]$ and (again for equal intensities) the visibility is $V(\tau)=\left|\gamma(\tau)\right|$ \cite{zernike1938,loudon2000}. As the Wiener-Khinchin theorem connects the power spectrum $F(w)$ with $\gamma$,
+Now \fref{eq:interference} can be written as $I=I_{1}+I_{2}+2 \sqrt{I_{1} I_{2}} \operatorname{Re}\left[\gamma(\tau)\right]$ and (again for equal intensities) the visibility is $V(\tau)=\left|\gamma(\tau)\right|$ \cite{zernike1938,loudon2000}. As the Wiener-Khinchin theorem connects the power spectrum $F(w)$ with $\gamma$,
 \begin{equation}
 	F(\omega)=\frac{1}{2 \pi} \int_{-\infty}^{\infty} \gamma(\tau) \exp (\mathrm{i} \omega \tau)  \dif \tau \,,
 \end{equation}
 the visibility is a function of the fourier-transformed spectrum \cite{lajunen04}.
 
-The \textit{coherence time }shall describe at which delay the visibility falls to approximately zero. One possible definition of the coherence time by Mandel based on the complex degree of coherence,
+The \textit{coherence time} $\tau_c$ shall describe at which delay the visibility falls to approximately zero. One possible definition of the coherence time by Mandel based on the complex degree of coherence,
 \begin{equation}
 \tau_c = \int_{-\infty}^{\infty} \left| \gamma(\tau)\right|^2 \diff \tau 
 \end{equation} will be used in the following. Other definitions commonly used are equivalent up to a constant factor and lead generally to coherence times of the same order of magnitude \cite{mandel1959,goodman2000}. As a relevant example for inner shell fluorescence, for an exponentially decaying electric field envelope\footnote{Corresponding to an intensity/photon number decay with time constant $\sfrac{\tau}{2}$} $E(t)=\Theta(t)e^{-t/\tau_E}$, the power spectrum is Lorentzian with an angular frequency FWHM of $\Delta \omega=\frac{2}{\tau_E}$,
@@ -174,8 +174,8 @@ quasi-monochromatic but spatially incoherent light source is proportional to the
 with the source volume $S$ and intensity distribution $I_s$, total source intensity $I_0=\int I_s(\vec{r}) \difc \vec{r}$ and distances $R_{1,2}=\left|\vec{r}_{1,2}-\vec{r}\right|$.
 
 
-\section{Hanbury-Brown Twiss Experiment}
-Hanbury-Brown and Twiss first used the correlation between the intensities captures by photomultiplier tubes to measure the angular size of stars  \cite{hanbury1956}. The underlying effect can be explained based on semi-classical coherence theory for chaotic light sources \cite{baym1997,goodman2000}:
+\section{Hanbury Brown Twiss Experiment}
+Hanbury Brown and Twiss first used the correlation between the intensities captured by photomultiplier tubes to measure the angular size of stars  \cite{hanbury1956}. The underlying effect can be explained based on semi-classical coherence theory for chaotic light sources \cite{baym1997,goodman2000}:
 
 If two sources $A$ and $B$ (in the original experiment different parts of the observed star) produce each spherical electromagnetic waves with random but constant phases $\phi_{A,B}$, such that (ignoring polarization) $E_{A,B}=c_{A,B} e^{i k\left|\vec{r}-\vec{r}_{1,2}\right|+i \phi_{A,B}} /\left|\vec{r}-\vec{r}_{A,B}\right|$, the total intensity $I_{1}$ at detector 1 is
 \begin{equation}
@@ -198,7 +198,7 @@ independent of the separation of the sources. On the other hand, the average of 
 	\left\langle I_{1} I_{2}\right\rangle =
 	\left\langle I_{1}\right\rangle\left\langle I_{2}\right\rangle+\frac{2}{L^{4}}|c_A|^{2}|c_B|^{2} \cos \left(k\left(r_{1 a}-r_{2 a}-r_{1 b}+r_{2 b}\right)\right) \,.
 \end{equation}
-Hence combining these to the normalized correlation results in
+Hence combining these to the normalized correlation (\fref{eq:g2}) results in
 \begin{equation}
 	\frac{\left\langle I_{1} I_{2}\right\rangle}{\left\langle I_{1}\right\rangle\left\langle I_{2}\right\rangle}
 	=1+2 \frac{\left\langle|\alpha|^{2}\right\rangle\left\langle|\beta|^{2}\right\rangle}{\left(\left\langle|\alpha|^{2}\right\rangle+\left\langle|\beta|^{2}\right\rangle\right)^{2}} \cos \left(k\left(r_{1 a}-r_{2 a}-r_{1 b}+r_{2 b}\right)\right) \,.
@@ -216,11 +216,11 @@ Based on the HBT experiment, a simplified explanation of Incoherent Diffractive 
 \paragraph{Siegert Relation}
 \label{sec:idi}
 For chaotic light with Gaussian statistics, Isserlis' theorem 
-$\left<ABCD\right>=\left<AB\right>\left<CD\right>+\left<AC\right>\left<BD\right>+\left<AD\right>\left<BC\right>$ can be used to factorize \fref{eq:g2}, leading  independently of the spatial configuration of the sources to
+$\left<ABCD\right>=\left<AB\right>\left<CD\right>+\left<AC\right>\left<BD\right>+\left<AD\right>\left<BC\right>$ can be used to factorize \fref{eq:g2}. This leads,  independently of the spatial configuration of the sources, to
 \begin{equation}
-	g^2(\vec{r_1},\vec{r_2}) = 1+ |g^1(\vec{r_1},\vec{r_2}) |^2 ,
+	g^2(\vec{r_1},\vec{r_2}) = 1+ |g^1(\vec{r_1},\vec{r_2}) |^2 .
 \end{equation}
-which is known as the Siegert Relation \cite{ou2017}. 
+This relation of the first and second order correlation function is known as the \textit{Siegert Relation} \cite{ou2017}. 
 
 As, as according to the van Cittert–Zernike theorem (\fref{eq:vcz}), $g^1$ encodes structural information, 
 \begin{equation}
@@ -237,7 +237,7 @@ This is the basic principle used in IDI to recover three dimensional spatial inf
 \end{figure}
 
 
-A more detailed quantum mechanical treatment considers the mixtures of the probability amplitudes of emission and detection at the two detectors as the individual paths are indistinguishable, leading what was shown as an equivalent description of the HBT effect for thermal light sources \cite{fano1961,sudarshan1963,glauber2006}.  The quantum mechanical description additionally allows the treatment of non-classical light sources such as single photon emitters \cite{mandel1995,classen2017}. This introduces a correction term to the equivalent of the Sieger of the order of $1/N$ with $N$ the number of emitters,
+A more detailed quantum mechanical treatment considers the mixtures of the probability amplitudes of emission and detection at the two detectors as the individual paths are indistinguishable, leading what was shown as an equivalent description of the HBT effect for thermal light sources \cite{fano1961,sudarshan1963,glauber2006}.  The quantum mechanical description additionally allows the treatment of non-classical light sources such as single photon emitters \cite{mandel1995,classen2017}. This introduces a correction term to the equivalent of the Siegert relation of the order of $1/N$ with $N$ the number of emitters,
 \begin{equation}
 	g^2(\vec{r_1},\vec{r_2}) = 1+ |g^1(\vec{r_1},\vec{r_2}) |^2 - \frac{2}{N} ,
 \end{equation}
@@ -248,11 +248,11 @@ which, for the considered cases of many fluorescence emitting atoms, is negligib
 Before continuing with investigation of IDI, some general semi-classical statistical aspects of speckle patterns are useful.
 Considering a complex sum of many phasors (e.g. the superposition of many electrical fields or probability amplitudes) of constant amplitude $A$ and independent uniformly in $(-\pi,\pi]$ distributed phases $\phi_k$, $c=\sum^N_k A e^{i\phi_k}$, for sufficiently large numbers of $N$, the real and imaginary parts
 \begin{align*}
-	r&=\Re c =  A \sum^N_k \cos(\phi_k) &
-	i&= \Im c =A \sum^N_k \sin(\phi_k)
+	r&=\operatorname{Re}(c) =  A \sum^N_k \cos(\phi_k) &
+	i&= \operatorname{Im}(c) =A \sum^N_k \sin(\phi_k)
 	\numberthis
 \end{align*}
-will (by Central Limit Theorem) be Gaussian random variables with zero mean and variance $\sigma^2=\frac{N}{2}A^2$, the probability distribution of the amplitude $a=\sqrt(a^2+i^2)$ will be a Rayleigh distribution
+will (by Central Limit Theorem) be Gaussian random variables with zero mean and variance $\sigma^2=\frac{N}{2}A^2$, the probability distribution of the amplitude $a=\sqrt(r^2+i^2)$ will be a Rayleigh distribution
 \begin{equation}
 	p(a)=\frac{1}{2\pi\sigma^2} a e^{\frac{a^2}{2\sigma^2}}
 \end{equation}
@@ -265,13 +265,13 @@ with mean $\overline{I}$ and standard deviation $\sigma=\overline{I}$  \cite{goo
 A sum of $M$ uncorrelated random variables following identical distributions given by \fref{eq:expdistr} follows a Gamma distribution,
 \begin{equation}
 	\label{eq:gammadistr}
-	p(I)=\frac{I^{M-1} e^{-I/\overline{I}}} {\overline{I}^M \Gamma(M)}.
+	p_M(I)=\frac{I^{M-1} e^{-I/\overline{I}}} {\overline{I}^M \Gamma(M)}.
 \end{equation}
-For a positive integer $M$ this simplifies with $\Gamma(M)=(M-1)!$ to an Erlang distribution  \cite{forbes2010,trost2020}.
+For a positive integer $M$ this simplifies with $\Gamma(M)=(M-1)!$ to an Erlang distribution  \cite{forbes2010}.
 If $I$ is distributed like \fref{eq:gammadistr} and furthermore Poisson sampled as discrete $k$ (such as photon counts in the semi-classical picture), it is negative binomial distributed,
 \cite{trost2020,mandel1959,holmes2019}
 \begin{equation}
-	p(k)=
+	p_M(k)=
 	\frac{\Gamma(k+M)}{\Gamma(M)\Gamma(k+1) }
 	\left( 1+\frac{1}{\overline{I}}
 	\right)^{-k}
@@ -281,7 +281,7 @@ If $I$ is distributed like \fref{eq:gammadistr} and furthermore Poisson sampled 
 \end{equation}
 with mean $\mu=M\overline{I}$ and variance $\mu+\frac{\mu^2}{M}$ (which is higher than the variance of the Poisson distribution $\mu$ ).
 
-This probability distribution can be compared to an experimental measured photon count distribution and the number of modes present in the measurement can be estimated by a regression for small mode numbers \cite{lehmkuhler2014,yun2019}. 
+This probability distribution can be compared to an experimental measured photon count distribution and the number of independent modes $M$ overlaid in the speckle pattern can be estimated by a regression for small mode numbers \cite{lehmkuhler2014,yun2019}. 
 For low photon numbers, a simplified approach can be used by only considering single- and two-photon events: By considering the ratio of the probabilities of those events, $p(1) / p(2)$,  an expression for the number of modes can be found, which can be simplified with a low intensity approximation $\mu\approx p(1)+2p(2)+O(\mu^2)$ to 
 \begin{equation}
 	M=\frac{\mu  (p(1)-2 p(2))}{2 p(2)-\mu  p(1)}\approx \frac{p(1)^2}{2 p(2) (1-p(1))-p(1)^2}
@@ -303,7 +303,7 @@ If the measurement is performed over a finite amount of time, the number of temp
 M_t=\frac{\left(\int_{-\infty}^{\infty} P(t)\diff t\right)^2}{\int_{-\infty}^{\infty} K(t) \left|\mu(t)\right|^2\diff t} \,,
 \label{eq:modes}
 \end{equation}
-where $P(t)$ is he integration window weighting function and $K(t)$ its autocorrelation \cite{goodman2007}. If the integration windows is set by the integration time $T$ of the detector, $P(t)$ is a rectangular function with the width $T$ and
+where $P(t)$ is the integration window weighting function and $K(t)$ its autocorrelation \cite{goodman2007}. If the integration window is set by the integration time $T$ of the detector, $P(t)$ is a rectangular function with the width $T$ and
 \begin{align*}
 	M_{t,\text{rect}} =T \left[\int_{-\infty}^{\infty} \Lambda\left(\frac{t}{T}\right) \left|\mu(t)\right|^2 \diff t \right]^{-1} \,, \numberthis \\
 \text{with  }\Lambda(x) = \begin{cases} 
@@ -401,7 +401,7 @@ as an estimation of the Signal to Noise Ratio (SNR), which will be further exami
 
 \section{Kossel Lines}
 \label{sec:kossel}
-X-ray radiation  originating from \textit{within} a single crystal, i.e fluorescence, can get Bragg reflected at the lattice planes of the crystal, causing intensity variations in $90^o-\theta_{hkl}$ around the direction $\vec{k}_{hkl}$ (perpendicular to the planes described by the Laue indices $hkl$), with $\theta_{hkl}$ the corresponding Bragg angle, forming the \textit{Kossel Cones} \cite{cowley1995}. On the spherical detector centered at at the crystal, the points with influenced intensity, the \textit{Kossel lines} (or, as they are more commonly called in electron microscopy, \text{Kikuchi lines}) would hence lie on circles, for a flat detector on general conic sections (see \fref{fig:kossel} for an illustration).
+X-ray radiation  originating from \textit{within} a single crystal, i.e. fluorescence, can get Bragg reflected at the lattice planes of the crystal, causing intensity variations in $90^o-\theta_{hkl}$ around the direction $\vec{k}_{hkl}$ (perpendicular to the planes described by the Laue indices $hkl$), with $\theta_{hkl}$ the corresponding Bragg angle, forming the \textit{Kossel Cones} \cite{cowley1995}. On the spherical detector centered at at the crystal, the points with influenced intensity, the \textit{Kossel lines} (or, as they are more commonly called in electron microscopy, \text{Kikuchi lines}) would hence lie on circles, for a flat detector on general conic sections (see \fref{fig:kossel} for an illustration).
 
 The visibility of the Kossel lines is governed by the same extinction rules as for the Bragg reflexes -- the structure factor $F_{hkl}$ has to be non-zero \cite{cowley1995}. For a zinc blende structure (such as GaAs) with atomic scattering factors $f_a$ and $f_b$, the structure factor is
 \begin{align}
@@ -433,6 +433,6 @@ As each point identified as belonging to a Kossel line has to be part of a conic
 	\begin{subfigure}[b]{0.35\textwidth}
 	\includegraphics[width=\linewidth]{images/kossel2.pdf}
 	\end{subfigure}
-	\caption[Geometry of Kossel Lines]{Geometry of Kossel Lines: Radiation from within a light source within a single crystal gets scattered at the lattice planes, causing a change in intensity along a cone of opening angle $90^o-\theta_{hkl}$ and vertex hkl (left). On a spherical detector centered around the sample, those intensity changes would be visible as circular Kossel lines (center). On a planar detector, the intersections of the Kossel cones are visible as conic sections (right)}
+	\caption[Geometry of Kossel Lines]{Geometry of Kossel Lines: Radiation from within a light source within a single crystal gets scattered at the lattice planes, causing a change in intensity along a cone of opening angle $90^o-\theta_{hkl}$ and vertex hkl (left). On a spherical detector centered around the sample, those intensity changes would be visible as circular Kossel lines (center). On a planar detector, the intersections of the Kossel cones are visible as conic sections (right).}
 	\label{fig:kossel}
 \end{figure}
