--- a/Tex/abstract.tex
+++ b/Tex/abstract.tex
@@ -4,13 +4,13 @@
 	\end{Huge}
 \\
 %Keine Doppelpiunkte
-Recently, a promising high-resolution imaging method termed \textit{Incoherent Diffractive Imaging} (IDI) has been proposed \cite{classen2017}: By utilizing the ultra-short and intense pulses provided by an X-ray Free Electron Laser (FEL) for excitation,  intensity correlations as commonly used in stellar interferometry can extract spatial information out of inner shell X-ray fluorescence.  
-IDI could, in theory, allow nanoscale resolution in three dimensions from few orientations and drastically increase the range of ultrashort X-ray FEL pulses applications. Nonetheless, in the only experimental implementation thus far, only the size of the focal spot of the FEL (>100\,nm) has been measured \cite{nakumura2020}.
+Recently, a promising high-resolution imaging method termed \textit{Incoherent Diffractive Imaging} (IDI) has been proposed \cite{classen2017}. IDI uses intensity correlations as commonly used in stellar interferometry to extract information from two-photon interference of inner shell fluorescence. As the X-ray photons from different point source must arrive at the detector within the coherence time, ultra-short X-ray pulses available at free-electron lasers (FEL) are used for excitation.   IDI has the potential for nanoscale resolution in three dimensions from few orientations only. Nonetheless, in the only experimental implementation thus far, only the size of the focal spot of the FEL (>100\,nm) has been measured \cite{nakumura2020}.
 
-In the present work, steps towards realizing the spatial resolution potential are made: By developing a simulation framework, various parameters of the setup are identified as being crucial for experimental success. Most importantly, this includes the pulse duration, focal spot size,  sample thickness and number of fluorescence photons. Further, this work highlights the importance of proper detector alignment and identification and correction of possible misalignment, as well as the handling of detector artifacts. Finally, a photon-counting method with reduced artifacts in the correlations based on a single-pixel maximum likelihood classification is presented. These insights have guided the design and analysis of an experiment performed at the SACLA FEL facility using 10\,fs X-ray pulses for fluorescence excitation.
+In the present work, various parameters of the setup are identified by simulations as crucial for experimental success. Most importantly, this includes the pulse duration, focal spot size,  sample thickness, and the number of fluorescence emitters. Further, this work highlights the importance of proper detector alignment and identification and correction of possible misalignment, as well as the handling of detector artifacts. Finally, a photon-counting method with reduced artifacts in the correlations based on a single-pixel maximum likelihood classification is presented. These insights have guided the design and analysis of an experiment performed at the SACLA FEL facility using 10\,fs X-ray pulses for fluorescence excitation.
 
-Here, the results of the previously reported imaging of the focus were reproduced by using iron and copper foils as a sample. The focal width in the vertical direction achieved by the \textit{100\,exa} nano-focusing system was determined by IDI  as (240$\pm$20)\,nm. From the low contrast observed, the number of independent modes overlaid in the measurement was estimated as >200.  As nanometer-scaled samples, spherical iron nanoparticles deposited in polymer matrices were used. The characterization of the prepared nanoparticle samples by small-angle scattering showed undesirable aggregation and reduced visibility of the structure factor.  From the recorded fluorescence speckle patterns, no features of the structure factor were recovered by the correlation analysis.  Additionally, the fluorescence patterns of thin gallium arsenide single crystal films were recorded.  An analysis of the visible Kossel lines reduced the misalignment not corrected for to $\pm$0.2°. However, no Bragg peaks could be identified in the IDI reconstruction.
-Even though the goal of providing a proof of principle experiment for nanoscale resolution could not be achieved, this work may provide a basis for upcoming experiments.
+Here, the results of the previously reported imaging of the focus were reproduced by using iron and copper foils as a sample.  In contrast to the previous work, the fluorescence was recorded perpendicular to the exciting X-ray beam, eliminating the possibility of coherent scattering confounding the measurement. The focal width in the vertical direction achieved by the \textit{100\,exa} nano-focusing system was determined by IDI  as (240$\pm$20)\,nm, in agreement with an independent wire scan measurement. Next, spherical magnetite nanoparticles deposited in polymer matrices were used as nanometer-sized samples. The characterization by small-angle scattering showed undesirable aggregation and reduced visibility of the structure factor. Consequently, no features of the structure factor were recovered by the correlation analysis of the fluorescence speckle patterns.  Finally, the fluorescence patterns of thin gallium arsenide single crystal films were recorded.  An analysis of the visible Kossel lines reduced the misalignment not corrected for to $\pm$0.2°. However, no Bragg peaks could be identified in the IDI reconstruction.
+
+Even though nanoscale resolution could not be achieved, the results obtained guided the design of a recent experiment at LCLS using sub-fs X-ray pulses and less challenging samples.
 
 
 
@@ -23,11 +23,9 @@ Even though the goal of providing a proof of principle experiment for nanoscale 
  	\textbf{Kurzfassung}\vspace{12mm}
  \end{Huge}
 \\
-Eine neuartiges Verfahren, \textit{Incoherent Diffractive Imaging}, verspricht mittels der in der  astronomischen Interferometrie gebrächliche Methode der Intensitätskorrelationenen  hochaufgelöste Strukturinformationen aus Röntgenfluoreszens zu extrahieren \cite{classen2017}.  
-In den bislang einzigen veröffentlichten Ergebnissen dieser Methode wurde jedoch nur  die Fokalgröße des zur Anregung genutzten Röntgen Freie-Elektronen-Laser (FEL) bestimmt \cite{nakumura2020}.
+Eine neues Bildgebungsverfahren, \textit{Incoherent Diffractive Imaging}, verspricht mittels der in der  astronomischen Interferometrie gebrächliche Methode der Intensitätskorrelationenen  hochaufgelöste Strukturinformationen in Röntgenfluoreszens zu extrahieren \cite{classen2017}. Da nur Photonen, die innerhalb der Kohärenzzeit detektiert werden, den nötigen Zwei-Photonen-Interferenz  Effekt zeigen, werden ultrakurze Röntgenpulse eines Freie-Elektronen-Laser (FEL) zur Anregung genutzt.  In den bislang einzigen veröffentlichten Ergebnissen dieser Methode wurde nur die Fokalgröße des FELs bestimmt \cite{nakumura2020}.
 
-In der vorliegenden Arbeit werden Schritte in Richtung der Messung deutlich kleineren Strukturen und dreidimensionaler Messung von Einkristallen vorgestellt: Simulationen erlauben den Einfluss und die Relevanz verschiedener Parameter einzuschätzen und Proben sowie einen Aufbau für ein Experiment am SACLA FEL zu entwickeln.
-In diesem wurden K$_\alpha$-Fluoreszenz Specklemuster von Metallfolien, Galliumarsenid Einkristallfolien und in Polymeren eingebetteten Eisennanopartikeln unter Anregung mit 10\,fs Röntgenpulsen vermessen. Aus den Daten der Metallfolien gelang es, die Abbildung des Fokus erfolgreich zu reproduzieren und die vertikale Größe des \textit{100 exa} Nanofokus als
-(240$\pm$20)\,nm zu bestimmen. Mittels Analyse der Kossellinien konnte die Unsicherheit in der Orientierung der Einkristalle auf $\pm$0.2° reduziert werden. In den Rekonstruktionen des Strukturfaktors der Kristalle wurden keine Bragg Peaks identifiziert. Die hergestellen Nanopartikel Proben zeigten in Messung der Kleinwinkelstreuung am SSRL Synchrotron nur schwach ausgeprägte charakteristische Merkmale, diese konnten in der IDI Messung nicht rekonstruiert werden.
-Obwohl in den ausgewerteten Daten bislang das Ziel der Auflösungserhöhung nicht erreicht werden konnte, erlauben die vorliegenden Ergebnisse weitere Experimente zielgerichter zu planen.
+In der vorliegenden Arbeit wurden zunächst entscheidende Faktoren für eine Auflösungssteigerung der Methode mittels Simulationen bestimmt. Darauf aufbauend, wurde ein Experiment am SACLA FEL durchgeführt. In diesem wurden K$_\alpha$-Fluoreszenz Specklemuster von Metallfolien, Galliumarsenid Einkristallfolien und in Polymeren eingebetteten Eisennanopartikeln unter Anregung mit 10\,fs Röntgenpulsen vermessen. Aus den Daten der Metallfolien gelang es, die Abbildung des Fokus erfolgreich zu reproduzieren und die vertikale Größe des \textit{100 exa} Nanofokus als (240$\pm$20)\,nm zu bestimmen. Die hergestellen Nanopartikel Proben zeigten in Messung der Kleinwinkelstreuung am SSRL Synchrotron nur schwach ausgeprägte charakteristische Merkmale, diese konnten in der IDI Messung nicht rekonstruiert werden. Mittels Analyse der Kossellinien konnte die Unsicherheit in der Orientierung der Einkristalle auf $\pm$0.2° reduziert werden. In den Rekonstruktionen des Strukturfaktors der Kristalle wurden keine Bragg Peaks identifiziert.
+
+Obwohl laut der ausgewerteten Daten bislang keine Nanometer Auflösung erreicht werden konnte, erlaubten die Ergebnisse ein weiteres Experiment, das kürzlich mit sub-Femtosekunden Pulsen und einfacheren Proben am  LCLS FEL durchgeführt wurde zu planen.
 \end{otherlanguage}
